platform/infra/terraform/old/mgmt/terraform/templates/manifests/ingress-argo-workflows.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-workflows
  namespace: argo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: ${ARGO_WORKFLOWS_DOMAIN_NAME}
      http:
        paths:
          - path: /argo-workflows(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: argo-workflows-server
                port:
                  number: 2746
